--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ html {
 
 body {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -37,6 +38,15 @@ button:active {
 }
 
 
+.difficulties h1 {
+    display: flex;
+}
+
+.difficulties h3 {
+    display: inline-block;
+    cursor: pointer;
+}
+
 
 .revealed {
     font-family: "Press Start";
@@ -47,19 +57,16 @@ button:active {
 }
 
 
-.flag{
+.flag {
     position: relative;
     width: 15px;
     height: 15px;
-    transform: translateX(-4px); 
+    transform: translateX(-4px);
 }
 
-img{
+img {
     position: relative;
     width: 18px;
     height: 18px;
-    transform: translateX(-4.5px); 
+    transform: translateX(-4.5px);
 }
-
-
-
