--- a/styles.css
+++ b/styles.css
@@ -32,17 +32,18 @@ button {
 }
 
 
+
 button:active {
     transform: scale(0.9);
     /* Apply a scaling effect when the button is pressed */
 }
 
 
-.difficulties h1 {
+.difficulties-title h1 {
     display: flex;
 }
 
-.difficulties h3 {
+.difficulties-title h3 {
     display: inline-block;
     cursor: pointer;
 }
@@ -69,4 +70,42 @@ img {
     width: 15px;
     height: 15px;
     transform: translateX(-4.5px);
+}
+
+.modal {
+    display: none;
+}
+
+
+.play-again {
+    margin-left: 35px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
+.flagAndTimer {
+    display: none;
+    margin: 20px;
+    width: 400px;
+    height: 100px;
+}
+
+.flagAmount,
+.timer {
+    display: inline-block;
+    width: 150px;
+    height: 40px;
+    margin: 20px;
+    background-color: #7B7B7B;
+    border-radius: 10px;
+}
+
+.flagAmount span,
+.timer span  {
+    display: block;
+    text-align: center;
+    width: 100%; 
+    color: rgb(113, 4, 4);
+    font-size: 1.9em;
 }
