--- a/styles.css
+++ b/styles.css
@@ -102,10 +102,57 @@ img {
 }
 
 .flagAmount span,
-.timer span  {
+.timer span {
     display: block;
     text-align: center;
-    width: 100%; 
+    width: 100%;
     color: rgb(113, 4, 4);
     font-size: 1.9em;
+}
+
+.lifesAndClues {
+    /* display: flex;  to be added in js*/
+    display: none;
+    width: 600px;
+    height: 80px;
+    margin: 20px;
+    border-radius: 10px;
+}
+
+.lifesAmount{
+    margin-left: 50px;
+}
+
+.cluesAmount{
+    position: fixed;
+    margin-left: 300px;
+}
+
+.lifesAmount span,
+.cluesAmount span {
+    display: inline-block;
+    text-align: center;
+    color: rgb(113, 4, 4);
+    font-size: 1.9em;
+    padding: 10px;
+    cursor: pointer;
+    /* Add cursor pointer for button-like effect */
+}
+
+.lifesAmount img,
+.cluesAmount img {
+    margin: 10px;
+    width: 50px;
+    /* Make the images fill the span */
+    height: 50px;
+    border-radius: 5px;
+    /* Add border-radius for a rounded button effect */
+    transition: transform 0.1s ease-in-out;
+    /* Add a smooth transition effect */
+}
+
+.lifesAmount img:active,
+.cluesAmount img:active {
+    transform: scale(0.9);
+    /* Apply a scaling effect when the image is pressed */
 }
